Api.Documentation.Nonce/.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-%SERVICE_NAME%
  namespace: %KUBERNETES_NAMESPACE%
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: | 
      more_set_headers "Content-Security-Policy: script-src 'self' 'nonce-${request_id}'; style-src 'self' 'nonce-${request_id}'";
      sub_filter_once off;
      sub_filter '%NONCE_TOKEN%' $request_id;
      sub_filter '(<body[^>]*>)(.*?)%NONCE_TOKEN%(.*?<\/body>)' '$1$2"$request_id"$3';
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - %CERTIFICATE_HOST%
    secretName: %CERTIFICATE_HOST%-tls
  rules:
  - host: %CERTIFICATE_HOST%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: %SERVICE_NAME%
            port:
              number: 8080
